# VH-01

./: .gitignore  README.md  pyproject.toml
configs/: ab_shorttrain_condenc_none.yaml  ab_shorttrain_condenc_residual.yaml  baseline_conditional_convlstm_real_ucf101_subset.yaml  baseline_conditional_convlstm_smoke.yaml  mvp.yaml  realdata.example.yaml  realdata.ucf101_subset.yaml  realdata.ucf101_subset_cond_early.yaml  realdata.ucf101_subset_full.yaml  realdata.ucf101_subset_semantic.yaml  realdata.ucf101_subset_semantic_cond_early.yaml  realdata.ucf101_subset_semantic_continuous_measure_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_chart_gated_temporal_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_chart_target_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_chart_temporal_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_full_psd_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_scale_calibrated_bootstrap.yaml  realdata.ucf101_subset_semantic_continuous_measure_scale_calibrated_low_eps_bootstrap.yaml  realdata.ucf101_subset_semantic_expanded.yaml  realdata.ucf101_subset_semantic_identity_residual.yaml  realdata.ucf101_subset_semantic_identity_residual_semantic_prototype.yaml  realdata.ucf101_subset_semantic_identity_residual_semantic_prototype_aligned.yaml  realdata.ucf101_subset_semantic_identity_residual_semantic_prototype_query_balanced_continuous_measure_response_jet_graph_tau.yaml  realdata.ucf101_subset_semantic_identity_residual_semantic_prototype_query_mainline.yaml  (+38 more)
(+74 files in other folders)
